wasm: convert and propagate filetype accept list

Backport the LocalFileApi::Type::fromQt() function from the dev
branch, and adapt it for use with the <input type=file> file dialog
API, which expects an accept string in a certain format (see code).

A similar change will be made for the dev, with adaptions
suitable for that branch.

Change-Id: I11585ae3d445634e123ce6394cada7b34af4d85a
Fixes: QTBUG-105472
Reviewed-by: Mikołaj Boc <Mikolaj.Boc@qt.io>
Reviewed-by: David Skoland <david.skoland@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>